# internal/infrastructure/persistence/d1/sql/menu_exercise.sql.go
@@ -1,0 +1,80 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+// source: menu_exercise.sql
+
+package sql
+
+import (
+	"context"
+)
+
+const createMenuExercise = `-- name: CreateMenuExercise :exec
+INSERT INTO menu_exercises (menu_id, exercise_id, position)
+VALUES (?, ?, ?)
+`
+
+type CreateMenuExerciseParams struct {
+	MenuID     string `json:"menu_id"`
+	ExerciseID string `json:"exercise_id"`
+	Position   int64  `json:"position"`
+}
+
+func (q *Queries) CreateMenuExercise(ctx context.Context, arg CreateMenuExerciseParams) error {
+	_, err := q.db.ExecContext(ctx, createMenuExercise, arg.MenuID, arg.ExerciseID, arg.Position)
+	return err
+}
+
+const deleteMenuExercisesByMenuID = `-- name: DeleteMenuExercisesByMenuID :exec
+DELETE FROM menu_exercises
+WHERE menu_id = ?
+`
+
+func (q *Queries) DeleteMenuExercisesByMenuID(ctx context.Context, menuID string) error {
+	_, err := q.db.ExecContext(ctx, deleteMenuExercisesByMenuID, menuID)
+	return err
+}
+
+const listMenuExercisesByMenuID = `-- name: ListMenuExercisesByMenuID :many
+SELECT
+    me.exercise_id,
+    e.name AS exercise_name,
+    me.position
+FROM
+    menu_exercises me
+JOIN
+    exercises e ON me.exercise_id = e.id
+WHERE
+    me.menu_id = ?
+ORDER BY
+    me.position ASC
+`
+
+type ListMenuExercisesByMenuIDRow struct {
+	ExerciseID   string `json:"exercise_id"`
+	ExerciseName string `json:"exercise_name"`
+	Position     int64  `json:"position"`
+}
+
+func (q *Queries) ListMenuExercisesByMenuID(ctx context.Context, menuID string) ([]ListMenuExercisesByMenuIDRow, error) {
+	rows, err := q.db.QueryContext(ctx, listMenuExercisesByMenuID, menuID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []ListMenuExercisesByMenuIDRow
+	for rows.Next() {
+		var i ListMenuExercisesByMenuIDRow
+		if err := rows.Scan(&i.ExerciseID, &i.ExerciseName, &i.Position); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
